fix navbar z-index

--- a/days.css
+++ b/days.css
@@ -1,5 +1,6 @@
 * {
 	font-family: "Roboto", "Arial", sans-serif;
+	z-index: 1;
 }
 
 a {
@@ -17,7 +18,7 @@ body {
 /* nav bar */
 nav {
 	margin-bottom: 74px;
-	z-index: 2;
+	z-index: 9;
 }
 
 nav img {
